@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-12-03
+2013-11-08 David Schneider
+- Translator backend: remove references to xml files
+- Translator backend: change default psana.cfg to include epics config
+
 Tag: V00-12-02
 2013-11-07 David Schneider
 - adapt Translator to PSEvt tag V00-07-04
